# temple

./: .gitignore  README.md  pyproject.toml  setup.py  temple.py
rewrite/: .gitignore  Makefile  interpreter.c  lexer.c  parser.c  temple.h
rewrite/libber/: libber.h  stack.c
rewrite/tests/: test_lexer.c  test_parser.c
src/: evaluate.py  interpreter.py  lexer.py  parser.py  temple.py
unittests/: base.html  evaluate.py  input.html  output.html  tests_template.py
